--- a/views/index.html
+++ b/views/index.html
@@ -3,28 +3,51 @@
 
 <head>
     <title>NodeJS: {{title}}</title>
+    <style>
+        div {
+          border: 10px rgb(98, 237, 83) solid;
+          margin-right: 50%;
+        }
+        </style>
 </head>
 
 <body>
     <h1>OOO 카페</h1>
+    <div>
+        <p>
+            {% if user %}
+                {{user.nickname}}님 환영합니다!<br>
+                <a href="http://localhost:{{port}}/auth/logout">로그아웃</a>
+            {% else %}
+                <form id="form" action="auth/login" method="post">
+                    <input type="text" name="id" placeholder="ID" /><br>
+                    <input type="text" name="password" placeholder="Password" /><br>
+                    <button type="submit">로그인</button>
+                </form>
+            {% endif %}
+            </p>
+        <p>
+            <a href="http://localhost:{{port}}/user">회원가입/회원정보관리</a><br>
+        </p>
+    </div>
+    
+    <br>
     <p>
-        {% if user %}
-            {{user.nickname}}님 환영합니다!<br>
-            <a href="http://localhost:{{port}}/auth/logout">로그아웃</a>
-        {% else %}
-            <form id="form" action="auth/login" method="post">
-                <input type="text" name="id" placeholder="ID" /><br>
-                <input type="text" name="password" placeholder="Password" /><br>
-                <button type="submit">로그인</button>
-            </form>
-        {% endif %}
+        <a href="http://localhost:{{port}}/post"><h3>글쓰기</h3></a>
     </p>
+    <br>
     <p>
-        <a href="http://localhost:{{port}}/user">회원가입/회원정보관리</a><br>
+        <h3>나의글보기</h3>
+        {% for v in myPosts %}
+            <a href="http://localhost:{{port}}/post/myPosts/{{v[1]}}">{{v[0]}}</a><br>
+        {% endfor %}
     </p>
-    <br><br>
+    <br>
     <p>
         <h3>전체글보기</h3>
+        {% for v in posts %}
+            <a href="http://localhost:{{port}}/post/myPosts/{{v[1]}}">{{v[0]}}-{{v[2]}}</a><br>
+        {% endfor %}
     </p>
     <p>
         Info page<br>
