--- a/views/user.html
+++ b/views/user.html
@@ -18,7 +18,7 @@
 
         <br>
 
-        <form id="form" action="update" method="post">
+        <form id="form" action="/user/update" method="post">
             사용자 정보 수정<br>
             <input type="text" name="id" placeholder="ID" /><br>
             <input type="text" name="password" placeholder="Password" /><br>
