--- a/views/postContent.html
+++ b/views/postContent.html
@@ -20,7 +20,7 @@
     {% endif %}
 
     
-    <form id="form" action="/comment/{{id}}/" method="post">
+    <form id="form" action="/comment/commenting/{{id}}/" method="post">
         
         댓글: <input type="text" name="comments" style="width: 300px; height: 50px"><br>
         <br>
@@ -28,10 +28,8 @@
     </form>        
     
     <h3>댓글</h3>
-        {% for v in myComments %}
-        <a href="http://localhost:{{port}}/post/{{v[1]}}">{{v[0]}}</a><br>
+        {% for v in comments %}
+        {{v[0]}}   (작성자: {{v[1]}})<br>
         {% endfor %}
-    
-    
 </body>
 </html> 
