--- a/views/postContent.html
+++ b/views/postContent.html
@@ -30,6 +30,11 @@
     <h3>댓글</h3>
         {% for v in comments %}
         {{v[0]}}   (작성자: {{v[1]}})<br>
+        {% if authority %}
+        <a href="http://localhost:{{port}}/post/delete/{{id}}"><button type="submit">댓글 삭제</a><br>
+        
+        {% endif %}
         {% endfor %}
+        
 </body>
 </html> 
