--- a/views/postContent.html
+++ b/views/postContent.html
@@ -19,7 +19,6 @@
     
     {% endif %}
 
-    
     <form id="form" action="/comment/commenting/{{id}}/" method="post">
         
         댓글: <input type="text" name="comments" style="width: 300px; height: 50px"><br>
@@ -29,12 +28,14 @@
     
     <h3>댓글</h3>
         {% for v in comments %}
-        {{v[0]}}   (작성자: {{v[1]}}) <a href="http://localhost:{{port}}/post/delete/{{v2}}"><button type="submit">댓글 삭제</a><br> 
-        {% if authority %}
-        <br>
-        
+        {{v[0]}}   (작성자: {{v[1]}}) <br>
+        {% if v[3] %}
+        <form action="/comment/update/{{id}}/{{v[2]}}"  method="post">
+            내용: <input type="text" name="comments">
+            <button type="submit">수정완료</button><br>
+            <a href="http://localhost:{{port}}/comment/delete/{{id}}/{{v[2]}}">댓글 삭제</a><br> 
+        </form>
         {% endif %}
         {% endfor %}
-        
 </body>
 </html> 
