--- a/views/user.html
+++ b/views/user.html
@@ -7,6 +7,7 @@
 
 <body>
     <p>
+        {% if isLoggedIn %}
         <form id="form" action="" method="post">
             사용자 정보 등록<br>
             <input type="text" name="id" placeholder="ID" /><br>
@@ -15,7 +16,7 @@
             <input type="text" name="nickname" placeholder="Nickname" /><br>
             <button type="submit">전송</button>
         </form>
-
+        {% endif %}
         <br>
 
         <form id="form" action="/user/update" method="post">
